package br.com.pucgo.exercicio5;

/**
 * Enum que representa o sexo de um passageiro
 */
public enum Sexo {
    MASCULINO,
    FEMININO,
    OUTRO
}
